src/objects/PreCheckFields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>APIName__c</fullName>
        <label>APIName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PreCheckFields</label>
</CustomObject>